2004-09-13  Pino Toscano <toscano.pino@tiscali.it>

	* The script code editor now can use the Kate KTextEditor, and
	consequently we can use its interfaces to do some various thing,
	like the syntax highlight of the code. Moreover if the
	KTextEditor::Document could not be created, will be used a
	standard KTextEdit as the code editor.

	* Some i18n fixes.

2003-09-10  Maurizio Paolini  <paolini@dmf.unicatt.it>

	* Now it's possible to construct the tanget to a conic.

2004-09-05  Pino Toscano <toscano.pino@tiscali.it>

	* A new LaTex exporter.

	* Add a new little system to handle script's properties like
	icon, template code and stuff related to script type.

	* Now any change in the Types Dialog is applied when the users
	click OK. If Cancel is pressed, any change is lost, even types
	addition/deletion. This is done by saving the types when Types
	Dialog is started.

	* Now the user can choose Start->Python Script from the popup
	menu to start a new Python script with the selected objects as
	arguments. If there are no objects selected, the Script Wizard
	starts as usual.

	* Add the main Kig icons with size 22 and 64.

	* The KSeg filter can import bisector lines.

	* Add a new tip.

2004-09-02  Dominique Devriese  <devriese@kde.org>

	* Commit David Vignoni's new kig_doc icon

2004-09-01  Pino Toscano <toscano.pino@tiscali.it>

	* Implement Vector difference as internal macro.

	* The Type list has a popup menu to edit, delete and export types.

	* Small changes to Script Wizard UI.

	* kfile_kig read also the compatibility version.

2004-07-21  Pino Toscano <toscano.pino@tiscali.it>

	* Make a text label not "pasted" to its point by adding a
	"padding" ( 2 pixels every side ).

	* Now the code editor in the Script Wizard uses KDE global fixed
	font.

2004-07-20  Pino Toscano <toscano.pino@tiscali.it>

	* Implement arc-line intersection in KSeg filter.

	* Add support in KGeo filter for constrained points and info
	about the presence of grid and axes.
