@@ -45,6 +45,7 @@
 #include "../objects/other_type.h"
 #include "../objects/point_imp.h"
 #include "../objects/tangent_type.h"
+#include "../objects/centerofcurvature_type.h"
 
 #include <qpen.h>
 
@@ -631,4 +632,56 @@ QString TangentConstructor::selectStatement(
     return i18n( "Select the object..." );
   else
     return i18n( "Select the point for the tangent to go through..." );
+}
+
+/*
+ * center of curvature of a curve
+ */
+
+CocConstructor::CocConstructor()
+  : MergeObjectConstructor(
+    I18N_NOOP( "Center Of Curvature" ),
+    I18N_NOOP( "The line tangent to a curve" ),
+    "tangent" )
+{
+  SimpleObjectTypeConstructor* conic =
+    new SimpleObjectTypeConstructor(
+      CocConicType::instance(),
+      "SHOULDNOTBESEEN", "SHOULDNOTBESEEN",
+      "cocconic" );
+
+  SimpleObjectTypeConstructor* cubic =
+    new SimpleObjectTypeConstructor(
+      CocCubicType::instance(),
+      "SHOULDNOTBESEEN", "SHOULDNOTBESEEN",
+      "coccubic" );
+
+  merge( conic );
+  merge( cubic );
+}
+
+CocConstructor::~CocConstructor()
+{
+}
+
+QString CocConstructor::useText(
+  const ObjectCalcer& o, const std::vector<ObjectCalcer*>&,
+  const KigDocument&, const KigWidget& ) const
+{
+  if ( o.imp()->inherits( ConicImp::stype() ) )
+    return i18n( "Center of Curvature of This Conic" );
+  else if ( o.imp()->inherits( CubicImp::stype() ) )
+    return i18n( "Center of Curvature of This Cubic Curve" );
+//  else assert( false );
+  return QString::null;
+}
+
+QString CocConstructor::selectStatement(
+  const std::vector<ObjectCalcer*>& sel, const KigDocument&,
+  const KigWidget& ) const
+{
+  if ( sel.size() == 0 )
+    return i18n( "Select the object..." );
+  else
+    return i18n( "Select the point where to compute the center of curvature..." );
 }
