@@ -128,4 +128,18 @@ public:
     const KigWidget& w ) const;
 };
 
+class CocConstructor
+  : public MergeObjectConstructor
+{
+public:
+  CocConstructor();
+  ~CocConstructor();
+
+  QString useText( const ObjectCalcer& o, const std::vector<ObjectCalcer*>& sel, const KigDocument& d,
+                   const KigWidget& v ) const;
+  QString selectStatement(
+    const std::vector<ObjectCalcer*>& sel, const KigDocument& d,
+    const KigWidget& w ) const;
+};
+
 #endif
